--- a/css/main.css
+++ b/css/main.css
@@ -12,20 +12,33 @@ html {
   width: 100%;
 }
 
+body {
+
+  margin: 0;
+}
+
 .banner {
-  overflow: hidden;
   position: relative;
+  overflow: hidden;
   max-height: 500px;
 }
 
 .banner-content {
-  padding: 1rem 1rem;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100%;
+  max-width: 50em;
+  transform: translateX(-50%);
+ /*
+  padding: 1rem;
+  width: 100%;
   max-width: 50em;
   position: absolute;
   z-index: 1000;
   bottom: 0;
-  left: 0;
-  /*transform: translateX(-50%);*/
+  left: 18rem;
+  transform: translateX(-50%);*/
 }
 
 .card-title {
