--- a/css/main.css
+++ b/css/main.css
@@ -26,25 +26,18 @@ body {
 .banner-content {
   position: absolute;
   left: 50%;
-  top: 50%;
+  bottom: -.5%;
   width: 100%;
   max-width: 50em;
+  transform: translateY(-50%);
   transform: translateX(-50%);
- /*
-  padding: 1rem;
-  width: 100%;
-  max-width: 50em;
-  position: absolute;
-  z-index: 1000;
-  bottom: 0;
-  left: 18rem;
-  transform: translateX(-50%);*/
 }
 
 .card-title {
   font-weight: bold;
   font-size: 4rem;
   line-height: 5.5rem;
+  margin-bottom: 0;
 }
 
 span {
@@ -53,6 +46,7 @@ span {
 }
 
 .card-body {
+  margin-top: 1.5rem;
   font-style: italic;
   font-size: 2rem;
 }
